Move project to domain